--- a/consul-template.service
+++ b/consul-template.service
@@ -1,6 +1,6 @@
 #!/bin/sh
 
 exec consul-template \
-     -consul=consul:8500 \
-     -template "/etc/consul-templates/nginx.conf:/etc/nginx/conf.d/app.conf:sv hup nginx"
+     -consul-addr "consul:8500" \
+     -template "/etc/consul-templates/nginx.conf.ctmpl:/etc/nginx/conf.d/app.conf:nginx -s reload"
 
